update colors, dimens, strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,21 @@
 <resources>
     <string name="app_name">Haxan</string>
-    <string name="Email">Masukkan Email / No.HP</string>
-    <string name="Password">Masukkan Password</string>
-    <string name="LupaPassword">Saya Lupa Password ? </string>
-    <string name="MasukGoogle">Masuk Lewat Google</string>
-    <string name="BelumAkun">Belum Punya Akun ? </string>
-    <string name="title_activity_menu">MenuActivity</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="minimum_password">Minimal Password</string>
-    <string name="auth_failed">Failed Atuh</string>
+
+   <!-- Login & Daftar page -->
+    <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="lupa_password">Lupa password</string>
+    <string name="atau">Atau</string>
+    <string name="login_google">Login melalui Google</string>
+    <string name="belum_punya_akun">Saya belum punya akun</string>
+
+    <string name="daftar">Daftar</string>
+    <string name="nama">Nama</string>
+    <string name="nohp">No. hp</string>
+    <string name="masukan_ulang_password">Masukan ulang password</string>
+    <string name="sudah_punya_akun">Saya sudah punya akun</string>
+
+    <!-- ..[yang lain].. page -->
+
 </resources>
