beranda v2.0: set date, layout rapih, clickable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
 
     <string name="beranda_header_1">Ada yang bisa kami bantu hari ini?</string>
     <string name="setrika">Setrika</string>
-    <string name="cuci">Cuci baju</string>
+    <string name="cleaning">Cleaning</string>
     <string name="kustom">Kustom</string>
 
     <string name="beranda_header_2">Yuk, manfaatkan promo menarik kami!</string>
